# leptos_marketplace_1

./: .cursorignore  .cursorrules  .editorconfig  .gitignore  A001_REFACTORING_VERIFICATION.md  APPLY_SOLUTION.txt  ARCHITECTURE.md  ASYNC_JWT_FIXES.md  AUTH_SYSTEM_README.md  BARCODE_FIX.md  BARCODE_FIX_V2.md  BUGFIX_a004_nomenclature_nullable_fields.md  BUILD_FIX_SUMMARY.md  CHANGELOG_DIAGNOSTICS.md  CLAUDE.md  COMPILATION_FIXES.md  CONNECTION_1C_MODAL_REFACTOR.md  CRITICAL_FIX_LOAD_DATA.md  Cargo.toml  DASHBOARD_CONFIG_FLOW.md  DATABASE_MIGRATION_connection_mp_id.md  DATE_INPUT_FIX.md  DATE_PERIOD_UX_IMPROVEMENTS.md  DATE_RANGE_PICKER_IMPLEMENTATION.md  DATE_RANGE_PICKER_V2_IMPROVEMENTS.md  DB_BACKUP_RESTORE_PLAN.md  DB_PATH_FIX.md  DEBUG_DB_SAVE.md  DEBUG_ODATA_ERROR.md  DEBUG_TRANSACTIONS_TAB.md  DEPLOYMENT_WINDOWS_SERVER.md  DIAGNOSTICS_GUIDE.md  DIAGNOSTIC_INSTRUCTIONS.md  DIAGNOSTIC_SUMMARY_u504.md  FILTER_LAYOUT_FIX.md  FILTER_TAGS_FIX.md  FINAL_UI_UPDATE_P904.md  FIX_A014_POST_UNPOST_BUTTONS.md  FIX_A015_302_REDIRECT.md  FIX_A015_DISPLAY_ISSUE.md  (+142 more)
crates/backend/: Cargo.toml  build.rs
crates/backend/src/: main.rs  routes.rs
crates/backend/src/api/: mod.rs  routes.rs
crates/backend/src/api/handlers/: a003_counterparty.rs  a004_nomenclature.rs  (+77 more)
crates/backend/src/dashboards/: mod.rs
crates/backend/src/data_schemes/: mod.rs
crates/backend/src/data_view/: filters.rs  mod.rs
crates/backend/src/domain/: mod.rs
crates/backend/src/general_ledger/: account_registry.rs  detail_links.rs  drilldown_dimensions.rs  drilldown_extra.rs  drilldown_session_repository.rs  dto.rs  llm.md  mod.rs  report_repository.rs  repository.rs  resource_detail.rs  service.rs  turnover_registry.rs  weekly_reconciliation.rs
crates/backend/src/handlers/: a001_connection_1c.rs  a002_organization.rs  a004_nomenclature.rs  a005_marketplace.rs  a007_marketplace_product.rs  a009_ozon_returns.rs  a010_ozon_fbs_posting.rs  a011_ozon_fbo_posting.rs  a012_wb_sales.rs  a013_ym_order.rs  a014_ozon_transactions.rs  a016_ym_returns.rs  d400_monthly_summary.rs  form_settings.rs  logs.rs  mod.rs  p900_mp_sales_register.rs  p900_sales_register.rs  p901_barcodes.rs  p902_ozon_finance_realization.rs  p903_wb_finance_report.rs  p904_sales_data.rs  p906_nomenclature_prices.rs  sys_scheduled_task.rs
crates/backend/src/plugins/: data.rs  demo.rs  engine.rs  funnel.rs  mod.rs  package.rs  publish.rs  repository.rs  runs.rs  service.rs
crates/backend/src/projections/: mod.rs
crates/backend/src/quality/: mod.rs
crates/backend/src/shared/: bi_timeline.rs  change_token.rs  config.rs  format.rs  mod.rs
crates/backend/src/system/: initialization.rs  mod.rs  tracing.rs
crates/backend/src/usecases/: mod.rs
crates/contracts/: Cargo.toml  build.rs
crates/contracts/schemas/: metadata.schema.json
crates/contracts/src/: lib.rs
crates/contracts/src/dashboards/: mod.rs
crates/contracts/src/domain/: mod.rs
crates/contracts/src/enums/: marketplace_type.rs  mod.rs
crates/contracts/src/general_ledger/: account_view.rs  accounting.rs  dto.rs  entity.rs  layer.rs  metadata.rs  mod.rs  report.rs  resource_detail.rs  supplier_balance.rs  turnover.rs  weekly_reconciliation.rs  ym_revenue_reconciliation.rs
crates/contracts/src/plugins/: bundle.rs  mod.rs  publish.rs  runs.rs
crates/contracts/src/projections/: mod.rs
crates/contracts/src/quality/: mod.rs
crates/contracts/src/shared/: bi_timeline.rs  form_settings.rs  logger.rs  mod.rs
crates/contracts/src/system/: favorites.rs  history.rs  mod.rs  raw_storage.rs  s3.rs  users.rs
crates/contracts/src/usecases/: mod.rs
crates/frontend/: Cargo.toml  index.html
crates/frontend/assets/: particle-animation.js
crates/frontend/assets/dashboards/: classic.css  classic.html  classic_card.html  future.css  future.html  indicator.html  modern.css  modern.html  modern_card.html  retro.css  retro.html
crates/frontend/js/: plugin-editor.js
crates/frontend/src/: app.rs  app_shell.rs  lib.rs
crates/frontend/src/dashboards/: mod.rs
crates/frontend/src/data_view/: api.rs  mod.rs  types.rs
crates/frontend/src/domain/: mod.rs
crates/frontend/src/general_ledger/: api.rs  mod.rs  types.rs
crates/frontend/src/layout/: global_context.rs  mod.rs  modal_service.rs
crates/frontend/src/navigator/: mod.rs
crates/frontend/src/plugins/: api.rs  editor.rs  engine.rs  frame.rs  host.rs  list.rs  menu.rs  mod.rs  view.rs
crates/frontend/src/projections/: mod.rs
crates/frontend/src/quality/: mod.rs
crates/frontend/src/routes/: routes.rs
crates/frontend/src/shared/: aggregate_picker.rs  api_utils.rs  auth_download.rs  change_tokens.rs  clipboard.rs  code_format.rs  date_utils.rs  export.rs  icons.rs  indicator_format.rs  list_utils.rs  markdown.rs  mod.rs  page_frame.rs  page_standard.rs  registrator_link.rs  speech.rs  table_utils.rs  time_bar_chart.rs
crates/frontend/src/system/: mod.rs
crates/frontend/src/usecases/: mod.rs
crates/frontend/static/: condition_editor.css  dom_validator.css  pivot.css  plugin-charts.js  plugin-editor.js  plugin-sdk.css  plugin-tables.js  universal_dashboard.css
crates/frontend/static/dashboards/: d401.css
crates/frontend/static/fonts/: jetbrains-mono.css  roboto.css
crates/frontend/static/pages/: a037_wb_product_snapshot.css  d406_wb_sales_funnel.css  general_ledger_matrix.css  llm_skills.css  llm_tools.css  login.css  p903_wb_finance_report.css  p907_ym_payment_report.css  plugins.css  quality_check_details.css  sys_raw_storage.css  sys_style_guide.css  sys_tasks.css
crates/frontend/static/themes/: base.css
crates/frontend/styles/: details_widget.css  header.css  main.css  navbar.css  right.css  table.css  tabs.css
crates/frontend/styles/0-tokens/: variables.css
crates/frontend/styles/1-base/: reset.css  utilities.css
crates/frontend/styles/2-layout/: center.css  footer.css  header.css  panel.css  sidebar.css  topheader.css
crates/frontend/styles/3-components/: buttons.css  dashboard.css  details.css  forms.css  import_page.css  lists.css  login-modern.css  login.css  modals.css  tables.css  tabs.css
(+1872 files in other folders)
