[workspace]
resolver = "2"
members = [
    "crates/frontend",
    "crates/backend",
    "crates/contracts",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde", "clock"] }
once_cell = "1"
uuid = { version = "1.11", features = ["v4", "serde", "js"] }

[profile.release]
# Одна единица кодогенерации — обязательно для fat LTO
codegen-units = 1
# Агрессивное удаление мёртвого кода через все crates (fat LTO)
lto = true
# opt-level = 3 (скорость). Поменять на "s" если нужно сократить размер ценой скорости.
opt-level = 3
