[workspace]
resolver = "2"
members = [
    "crates/frontend",
    "crates/backend",
    "crates/contracts",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde", "clock"] }
once_cell = "1"
uuid = { version = "=1.19.0", features = ["v4", "v5", "serde", "js"] }

[profile.dev]
opt-level = 0

# Код проекта оставляем без оптимизаций для быстрых dev-пересборок.
# Для frontend dev-сборки не пишем debuginfo в wasm-артефакт.
[profile.dev.package.frontend]
opt-level = 0
debug = 0
[profile.dev.package.contracts]
opt-level = 0
[profile.dev.package.backend]
opt-level = 0

# adobe-cmap-parser 0.4.1 имеет integer overflow в парсере CMap (lib.rs:208),
# который паникует только при включённых overflow-checks (по умолчанию в dev).
# В release этот `+` просто оборачивается. Отключаем проверки для этого пакета,
# чтобы извлечение PDF (pdf-extract) работало и в dev-сборке.
[profile.dev.package.adobe-cmap-parser]
overflow-checks = false

[profile.release]
# Одна единица кодогенерации — обязательно для fat LTO
codegen-units = 1
# Агрессивное удаление мёртвого кода через все crates (fat LTO)
lto = true
# opt-level = 3 (скорость). Поменять на "s" если нужно сократить размер ценой скорости.
opt-level = 3
