[package]
name = "backend"
version.workspace = true
edition.workspace = true

[dependencies]
contracts = { path = "../contracts" }

sea-orm = { version = "0.12", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
anyhow = "1"
axum = { version = "0.7", features = ["macros", "multipart"] }
tower-http = { version = "0.5.2", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
once_cell = { workspace = true }
uuid = { workspace = true }
reqwest = { version = "0.12", features = ["blocking", "json"] }
async-trait = "0.1"
urlencoding = "2.1"
jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
toml = "0.8"
async-openai = { version = "0.32.3", features = ["chat-completion", "model"] }
thiserror = "1.0"
csv = "1"
zip = "8.1.0"
