[package]
name = "backend"
version.workspace = true
edition.workspace = true

[dependencies]
contracts = { path = "../contracts" }

sea-orm = { version = "0.12", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros", "with-json", "sea-orm-internal"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
anyhow = "1"
axum = { version = "0.7", features = ["macros", "multipart"] }
tower-http = { version = "0.5.2", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
once_cell = { workspace = true }
uuid = { workspace = true }
reqwest = { version = "0.12", features = ["blocking", "json", "gzip", "deflate"] }
async-trait = "0.1"
urlencoding = "2.1"
jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
toml = "0.8"
async-openai = { version = "0.32.3", features = ["chat-completion", "model"] }
bytes = "1"
hmac = "0.12"
thiserror = "1.0"
csv = "1"
encoding_rs = "0.8"
zip = { version = "8.1.0", default-features = false, features = ["deflate"] }
pdf-extract = "0.10.0"
regex = "1"
ammonia = "3"
maplit = "1"
cron = "0.12"
rquickjs = { version = "0.12", features = ["futures", "parallel"] }
rquickjs-serde = "0.6"
sqlparser = { version = "0.62", features = ["visitor"] }
# Mail integration (LLM send/receive via reg.ru): SMTP send + IMAP fetch/parse.
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1-native-tls", "builder", "hostname"] }
imap = "2.4"
native-tls = "0.2"
mail-parser = "0.9"
