[package]
name = "contracts"
version.workspace = true
edition.workspace = true

[lib]
name = "contracts"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = "1"

[build-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"