[package]
name = "frontend"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
contracts = { path = "../contracts" }

leptos = { version = "0.8", features = ["csr"] }
leptos_router = { version = "0.8" }
leptos-struct-table = "0.15.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window", "History", "Location", "Request", "RequestInit", "RequestMode", "Response", "Headers", "Blob", "BlobPropertyBag", "Url", "HtmlAnchorElement", "HtmlElement", "Document"] }
console_log = "1.0"
log = "0.4"
console_error_panic_hook = "0.1.7"
serde_qs = "0.12"
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
once_cell = { workspace = true }
serde-wasm-bindgen = "0.6"
gloo-timers = { version = "0.3", features = ["futures"] }
gloo-net = "0.5"
